3.0.0: Se modifico el auth y sde mejoro y se cambiaron los endmoints